Bug 436355 - Error messages when I cancel installation of krunner addons
Summary: Error messages when I cancel installation of krunner addons
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-29 12:17 UTC by Patrick Silva
Modified: 2021-04-29 13:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.82
Sentry Crash Report:


Attachments
screen recording (2.87 MB, video/webm)
2021-04-29 12:19 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-04-29 12:17:48 UTC
SUMMARY
Please watch the attached screen recording.

EXPECTED RESULT
no error message when installation is canceled

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Graphics Platform: X11
Comment 1 Patrick Silva 2021-04-29 12:19:09 UTC
Created attachment 138002 [details]
screen recording
Comment 2 Bug Janitor Service 2021-04-29 12:57:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/120
Comment 3 Alexander Lohnau 2021-04-29 13:20:15 UTC
Git commit e429d469bbdd97e0cec4613caea67c8073b53453 by Alexander Lohnau.
Committed on 29/04/2021 at 13:09.
Pushed by alex into branch 'master'.

Do not show error when installation is canceled
FIXED-IN: 5.82

The exit code 130 is means the operation was canceled using CTRL+C, see https://tldp.org/LDP/abs/html/exitcodes.html
for reference. In case the install commands gracefully exit, but don't
finish the installation we don't want the user to be confronted with an
error message.

M  +12   -6    src/core/installation.cpp

https://invent.kde.org/frameworks/knewstuff/commit/e429d469bbdd97e0cec4613caea67c8073b53453
Comment 4 Alexander Lohnau 2021-04-29 13:21:34 UTC
Git commit eb756743660cb8c5451a3d8e35aaa6d07c692770 by Alexander Lohnau.
Committed on 29/04/2021 at 13:20.
Pushed by alex into branch 'master'.

krunner plugininstaller: Do not show error when user cancels dialog

M  +6    -2    kcms/runners/plugininstaller/main.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/eb756743660cb8c5451a3d8e35aaa6d07c692770