Do not show error when installation is canceled

BUG: 436355
FIXED-IN: 5.82

The exit code 130 is means the operation was canceled using CTRL+C, see https://tldp.org/LDP/abs/html/exitcodes.html
for reference. In case the install commands gracefully exit, but don't
finish the installation we don't want the user to be confronted with an
error message.